[gd_scene load_steps=26 format=3 uid="uid://coindgqp3r1la"]

[ext_resource type="Script" uid="uid://o7qn56gw5y07" path="res://scripts/main.gd" id="1_85g3d"]
[ext_resource type="PackedScene" uid="uid://6fauqiuifkj6" path="res://scenes/ui.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bp1ajhwdx7hx8" path="res://scenes/opening.tscn" id="2_jkv2x"]
[ext_resource type="Script" uid="uid://4qoxfl1ubv2m" path="res://scripts/char_manager.gd" id="3_tbgi4"]
[ext_resource type="AudioStream" uid="uid://ljtw4ylpu37i" path="res://assets/audio/punch.wav" id="4_choun"]
[ext_resource type="Script" uid="uid://dq3rajkhiqy2s" path="res://scripts/audio_manager.gd" id="4_jyhfs"]
[ext_resource type="AudioStream" uid="uid://ciqre2xqrqmjp" path="res://assets/audio/filles style.mp3" id="5_ya4ey"]
[ext_resource type="Texture2D" uid="uid://ghceqo5c6mus" path="res://assets/sprites/ines2.png" id="6_o6xl0"]
[ext_resource type="Texture2D" uid="uid://bf1pnllwi0yne" path="res://assets/sprites/ines1.png" id="7_tipki"]
[ext_resource type="Texture2D" uid="uid://cc0d2kqja5pj" path="res://assets/sprites/gaia_hurt.png" id="7_trceg"]
[ext_resource type="Texture2D" uid="uid://bbfdy2qil0wb0" path="res://assets/sprites/gaia_idle.png" id="8_a8y0u"]
[ext_resource type="Texture2D" uid="uid://cfeaaavfoyxet" path="res://assets/sprites/gaia_ko.png" id="9_jkv2x"]
[ext_resource type="Texture2D" uid="uid://d0wx7xnthelv1" path="res://assets/sprites/gaia_speak.png" id="10_jbj1t"]
[ext_resource type="PackedScene" uid="uid://bhglp8fnpsly6" path="res://scenes/room_1.tscn" id="13_trceg"]
[ext_resource type="Script" uid="uid://ce1ov771pxq2r" path="res://scripts/room_1.gd" id="14_a8y0u"]

[sub_resource type="Environment" id="Environment_tipki"]
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.59

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_tbgi4"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ya4ey"]
random_pitch = 1.3
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("4_choun")

[sub_resource type="SpriteFrames" id="SpriteFrames_tbgi4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_trceg")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_a8y0u")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_jkv2x")
}],
"loop": true,
"name": &"ko",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_jbj1t")
}],
"loop": true,
"name": &"speak",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_choun"]
resource_name = "RESET_Vraisorcier"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.36898, 0.36898, 1)]
}

[sub_resource type="Animation" id="Animation_a8y0u"]
resource_name = "RESET_Woufeuse"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.3, 0.3, 0.813)]
}

[sub_resource type="Animation" id="Animation_85g3d"]
resource_name = "hit_Vraisorcier"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(0.378929, 2.82843, 1),
"update": 0,
"values": [Vector3(0.36898, 0.36898, 1), Vector3(0.429, 0.429, 1.163), Vector3(0.369, 0.369, 1)]
}

[sub_resource type="Animation" id="Animation_trceg"]
resource_name = "hit_Woufeuse"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(0.378929, 2.82843, 1),
"update": 0,
"values": [Vector3(0.3, 0.3, 0.813), Vector3(0.374, 0.374, 1.014), Vector3(0.3, 0.3, 0.813)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ya4ey"]
_data = {
&"RESET_Vraisorcier": SubResource("Animation_choun"),
&"RESET_Woufeuse": SubResource("Animation_a8y0u"),
&"hit_Vraisorcier": SubResource("Animation_85g3d"),
&"hit_Woufeuse": SubResource("Animation_trceg")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_85g3d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_tipki")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_o6xl0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_tipki")
}],
"loop": true,
"name": &"ko",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_tipki")
}],
"loop": true,
"name": &"speak",
"speed": 5.0
}]

[node name="Main" type="Node3D"]
script = ExtResource("1_85g3d")
opening_scene = ExtResource("2_jkv2x")

[node name="UI" parent="." instance=ExtResource("1_o5qli")]

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1, 1.91069e-15, -4.37114e-08, 1.13167, 8.58584, 0.619147)
light_energy = 6.433
light_size = 0.704
shadow_enabled = true
shadow_blur = 0.245
spot_range = 10.959
spot_attenuation = 1.1
spot_angle = 54.97

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.16347, 1.96541, 0.619147)
keep_aspect = 0
environment = SubResource("Environment_tipki")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("4_jyhfs")

[node name="BGM" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("5_ya4ey")
volume_db = -28.0
autoplay = true
parameters/looping = true

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="AudioManager"]
stream = SubResource("AudioStreamMicrophone_tbgi4")
autoplay = true
bus = &"Record2"

[node name="AudioStreamPlayerW" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = true
bus = &"Woufeuse"

[node name="AudioStreamPlayerV" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = true
bus = &"Vraisorcier"

[node name="TimerThreshold" type="Timer" parent="AudioManager"]
one_shot = true

[node name="TimerDelay" type="Timer" parent="AudioManager"]
one_shot = true

[node name="Punch" type="AudioStreamPlayer" parent="AudioManager"]
stream = SubResource("AudioStreamRandomizer_ya4ey")
max_polyphony = 2

[node name="CharManager" type="Node" parent="."]
script = ExtResource("3_tbgi4")

[node name="Woufeuse" type="RigidBody3D" parent="CharManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.372, 1.42961, 1.56506)
collision_layer = 2
mass = 20.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -1.3, 0)
inertia = Vector3(0, 0, 5)
contact_monitor = true
max_contacts_reported = 3

[node name="Sprite" type="AnimatedSprite3D" parent="CharManager/Woufeuse"]
transform = Transform3D(-1.31134e-08, 0, 0.813, 0, 0.3, 0, -0.3, 0, -3.55374e-08, 0, 0, 0)
alpha_cut = 2
sprite_frames = SubResource("SpriteFrames_tbgi4")
animation = &"idle"

[node name="Collision" type="CollisionPolygon3D" parent="CharManager/Woufeuse"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
depth = 0.15
polygon = PackedVector2Array(-0.464779, -1.11923, -0.464779, -1.11923, -0.170468, 0.0131581, -0.40297, -0.524024, -0.620549, -0.537168, -0.68092, -0.312048, -0.191816, 0.112659, -0.425533, 0.140453, -0.581395, 0.356498, -0.547385, 0.777396, -0.117367, 1.07661, 0.450538, 0.89542, 0.618814, 0.485137, 0.469577, 0.189606, 0.22164, 0.110144, 0.621906, -0.378717, 0.595738, -0.592135, 0.39144, -0.605335, 0.14641, 0.0385971, 0.407647, -1.10014, 0.386, -1.249, -0.418983, -1.24874)

[node name="RagdollReset" type="Timer" parent="CharManager/Woufeuse"]
one_shot = true

[node name="AnimationWoufeuse" type="AnimationPlayer" parent="CharManager/Woufeuse"]
libraries = {
&"": SubResource("AnimationLibrary_ya4ey")
}

[node name="HitReset" type="Timer" parent="CharManager/Woufeuse"]
wait_time = 5.0
one_shot = true

[node name="KOReset" type="Timer" parent="CharManager/Woufeuse"]
wait_time = 3.0
one_shot = true

[node name="Vraisorcier" type="RigidBody3D" parent="CharManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.372, 1.4305, -0.67532)
collision_layer = 2
mass = 50.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -1.3, 0)
inertia = Vector3(0, 0, 5)
contact_monitor = true
max_contacts_reported = 3

[node name="Sprite" type="AnimatedSprite3D" parent="CharManager/Vraisorcier"]
transform = Transform3D(-1.61286e-08, 0, 1, 0, 0.36898, 0, -0.36898, 0, -4.37114e-08, 0, 0, 0)
alpha_cut = 2
sprite_frames = SubResource("SpriteFrames_85g3d")
animation = &"ko"

[node name="Collision" type="CollisionPolygon3D" parent="CharManager/Vraisorcier"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
depth = 0.15
polygon = PackedVector2Array(-0.72772, -1.1452, -0.72772, -1.1452, -0.860122, -0.714163, -0.366004, 0.00413001, -0.524032, 0.00759363, -0.670783, 0.248496, -0.857291, 0.459976, -0.562794, 0.564379, -0.612831, 0.783879, -0.399139, 0.697701, -0.172927, 1.12267, 0.121769, 0.720012, 0.372356, 0.801964, 0.342053, 0.595137, 0.648694, 0.502072, 0.509261, 0.331667, 0.383249, 0.0208127, 0.17304, 0.0479949, 0.694373, -0.594895, 0.568832, -1.02639, 0.395, -1.345, -0.430037, -1.34505)

[node name="RagdollReset" type="Timer" parent="CharManager/Vraisorcier"]
one_shot = true

[node name="AnimationVraisorcier" type="AnimationPlayer" parent="CharManager/Vraisorcier"]
libraries = {
&"": SubResource("AnimationLibrary_ya4ey")
}

[node name="HitReset" type="Timer" parent="CharManager/Vraisorcier"]
wait_time = 5.0
one_shot = true

[node name="KOReset" type="Timer" parent="CharManager/Vraisorcier"]
wait_time = 3.0
one_shot = true

[node name="Room 1" parent="." instance=ExtResource("13_trceg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.884047, 0, 0.554767)
script = ExtResource("14_a8y0u")

[connection signal="finished" from="AudioManager/AudioStreamPlayerW" to="AudioManager" method="_on_audio_stream_player_w_finished"]
[connection signal="finished" from="AudioManager/AudioStreamPlayerV" to="AudioManager" method="_on_audio_stream_player_v_finished"]
[connection signal="timeout" from="AudioManager/TimerDelay" to="AudioManager" method="_on_timer_delay_timeout"]
[connection signal="body_entered" from="CharManager/Woufeuse" to="CharManager" method="_on_woufeuse_body_entered"]
[connection signal="timeout" from="CharManager/Woufeuse/RagdollReset" to="CharManager" method="_on_woufeuse_ragdoll_reset_timeout"]
[connection signal="animation_finished" from="CharManager/Woufeuse/AnimationWoufeuse" to="CharManager" method="_on_animation_woufeuse_animation_finished"]
[connection signal="timeout" from="CharManager/Woufeuse/HitReset" to="CharManager" method="_on_woufeuse_hit_reset_timeout"]
[connection signal="timeout" from="CharManager/Woufeuse/KOReset" to="CharManager" method="_on_woufeuse_ko_reset_timeout"]
[connection signal="body_entered" from="CharManager/Vraisorcier" to="CharManager" method="_on_vraisorcier_body_entered"]
[connection signal="timeout" from="CharManager/Vraisorcier/RagdollReset" to="CharManager" method="_on_vraisorcier_ragdoll_reset_timeout"]
[connection signal="animation_finished" from="CharManager/Vraisorcier/AnimationVraisorcier" to="CharManager" method="_on_animation_vraisorcier_animation_finished"]
[connection signal="timeout" from="CharManager/Vraisorcier/HitReset" to="CharManager" method="_on_vraisorcier_hit_reset_timeout"]
[connection signal="timeout" from="CharManager/Vraisorcier/KOReset" to="CharManager" method="_on_vraisorcier_ko_reset_timeout"]
